sticky status no longer covers dropdown menus

--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -152,7 +152,7 @@
       max-height: 999px;
       overflow: visible;
       visibility: hidden;
-      z-index: 9;
+      z-index: 19;
       background: white;
       top: 48px;
       left: 0;
